deployment-template.yml
apiVersion: v1
kind: Template
metadata:
  name: dev-learn-pipeline
parameters:
- name: IMAGE
  description: Docker image to deploy
objects:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: dev-learn
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          deploymentconfig: dev-learn
      spec:
        containers:

          - name: dev-learn
            image: ${IMAGE}
            imagePullPolicy: Always

            ports:
              - containerPort: 3000

            livenessProbe:
              tcpSocket:
                port: 3000
              initialDelaySeconds: 1
              timeoutSeconds: 1

            readinessProbe:
              httpGet:
                path: /
                port: 3000
              initialDelaySeconds: 1
              timeoutSeconds: 1

            resources:
              requests:
                cpu: 100m
                memory: 128Mi
              limits:
                cpu: 1000m
                memory: 256Mi
