service.yml
apiVersion: v1
kind: Service
metadata:
  name: dev-learn
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    deploymentconfig: dev-learn
